# unimake

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
.unimake/: cli.py  config.py  layout.py  project.py
development/: freeze.json
development/images/: base.dockerfile  golang.dockerfile  utils.sh
development/linux/: user.sh
development/linux/alpine/: Dockerfile
development/linux/ubuntu/: Dockerfile  user.sh
development/remotes/container/: Dockerfile
development/remotes/ssh/: docker-compose.yaml
development/ssh/: Dockerfile  docker-compose.yaml
docs/: installation.md  intro.md  tool-umk.md
docs/design/: high-level.md
docs/sample/: go.mod
docs/sample/.unimake/: config.py  project.py  remote.py  remotes.py
examples/project.go/: Dockerfile  go.mod
examples/project.go/.unimake/: cli.py  config.py  project.py  remotes.py
examples/project.go/internal/: hello.go
scripts/: cli_parsers.py  clier.py
tests/: __init__.py
tests/ssh-server/: Dockerfile  docker-compose.yaml
umk/: __init__.py  cli.py  core.py  dotunimake.py  entrypoint.py  exceptions.py  globals.py  project.py  state.py  vcs.py
umk/adapters/: __init__.py
umk/adapters/delve/: __init__.py  binary.py  flags.py
umk/adapters/go/: __init__.py  go.py
umk/adapters/golang/: go.py  mod.py  project.py
umk/application/: __init__.py  config.py  entrypoint.py  main.py  modules.py  printers.py  root.py  utils.py
umk/application/cmd/: __init__.py  config.py  project.py  remote.py  root.py  target.py  targets.py
umk/application/utils/: __init__.py  printers.py
umk/cli/: __init__.py  dot_unimake.py  main.py
umk/core/: __init__.py  errors.py  globals.py  properties.py  serialization.py  typing.py  typings.py
umk/delve/: binary.py  flags.py
umk/dot/: __init__.py  implementation.py  instance.py  states.py
umk/dotunimake/: dotunimake.py  implementation.py  instance.py  states.py
umk/framework/: __init__.py
umk/framework/adapters/: __init__.py  delve.py  git.py
umk/framework/cli/: __init__.py  sections.py
umk/framework/config/: __init__.py  base.py
umk/framework/dependencies/: __init__.py  base.py  builder.py  container.py  packages.py
umk/framework/filesystem/: __init__.py  copy.py  (+3 more)
umk/golang/: build.py  delve.py  go.py  mod.py  project.py
umk/kit/: __init__.py  cli.py
umk/project/: __init__.py  golang.py
umk/remote/: __init__.py  docker.py  interface.py  register.py  registerer.py  ssh.py
umk/runtime/: __init__.py  config.py  container.py  errors.py  instance.py  loader.py  project.py  remotes.py  targets.py  utils.py
umk/system/: env.py  environs.py  filesystem.py  fs.py  shell.py  user.py
umk/unimake/: __init__.py  application.py  config.py  dependencies.py  entrypoint.py  project.py  remote.py  root.py
unicli/: application.py  entrypoint.py
unimake/: __init__.py  application.py  cli.py  entrypoint.py  main.py  remote.py
(+80 files in other folders)
