[tool.poetry]
name = "umk"
version = "0.0.1"
description = "UMK (Uniti Make) is a new era of the 'make' utility."
authors = ["Edward Sarkisyan <edw.sarkisyan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
rich = "^13.6.0"
gitpython = "^3.1.37"
asyncclick = "^8.1.3.4"
anyio = "^4.0.0"
python-dotenv = "^1.0.0"
beartype = "^0.16.3"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
